Updated media queries

--- a/style.css
+++ b/style.css
@@ -166,7 +166,9 @@ body {
 }
 
 .course-card {
-    width: 250px;
+    flex-grow: 1;
+    flex-basis: 20%;
+    margin: 5px;
 }
 
 .course-card img {
@@ -270,4 +272,24 @@ body {
     align-items: center;
     display: flex;
     justify-content: space-between;
+}
+
+/*Media Queries*/
+
+@media screen and (max-width:800px) {
+    body{
+        font-size: 10px;
+    }
+    
+}
+
+@media screen and (max-width:600px) {
+    .course-card{
+        flex-basis: 40%;
+    }
+
+    .navbar__s2,.navbar__s3{
+        display: none;
+    }
+    
 }
